[package]
name = "See3_DAO"
version = "0.1.0"
authors = ["[Arbion Halili] <arbion.halili@bnc.ox.ac.uk>"]
edition = "2021"

[dependencies]
ink = { version = "5.0.0", default-features = false }

[dev-dependencies]
ink_e2e = { version = "5.0.0" }

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
]
ink-as-dependency = []
e2e-tests = []
