[package]
name = "see3dao"
version = "0.1.0"
authors = ["Andrei Cravtov <the.andrei.cravtov@gmail.com>", "Arbion Halili <arbion.halili@bnc.ox.ac.uk>"]
edition = "2021"

[lib]
name = "see3dao"
path = "lib.rs"
crate-type = [
    "cdylib",
]

[dependencies]
ink = { version = "5.0.0", default-features = false }
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.11.2", default-features = false, features = ["derive"], optional = true }

[dev-dependencies]
ink_e2e = { version = "5.0.0" }

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
]
ink-as-dependency = []
e2e-tests = []
